<resources>
    <string name="app_name">DicAlcoholZ</string>
    <string name="introducir_lista_api_rest">Poner API</string>
    <string name="login">Mandar datos sensores</string>
    <string name="tituloAplicacion">Nombre</string>
    <string name="actividad1"> API Rest</string>
    <string name="actividad2">Sensor</string>

    <string name="signed_in">Signed in!</string>
    <string name="signed_out">Signed out!</string>
    <string name="signed_cancelled">Signed in cancelled</string>
    <string name="logout_button">Logout</string>
    <string name="firebase_user_fmt">Firebase User: %s</string>
    <string name="login_button">Login</string>
</resources>